# Estimation-and-Control-Library

./: .gitignore  CMakeLists.txt  README.md  setup.bash
documents/latex/: ecl.tex  ecl_bib.bib  mysymb.sty
documents/latex/src/: cartpoledyn.tex  intro.tex  sensors.tex
models/: cartpole.xml
models/cartpole/: cartpole.sdf  model.config
scripts/: cartpole_env.py  control_systems.py  controllers.py  dynamics.py  envs.py  estimators.py  main_cartpole.py  rigidmotion.py
src/: CMakeLists.txt  server_cartpole.cpp  server_cartpole.h
src/plugins/: CMakeLists.txt  gazebo_cartpole.cpp  gazebo_cartpole.h
worlds/: cartpole_world.sdf
